# mem0

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  bug.md  pyproject.toml  pyrightconfig.json
.claude/: hookify.dashboard-api-proxy.local.md  hookify.dashboard-middleware.local.md
docs/superpowers/plans/: 2026-05-08-llm-base-url-env.md  2026-05-16-local-run-makefile.md
docs/superpowers/specs/: 2026-05-08-llm-base-url-env-design.md  2026-05-16-local-run-makefile-design.md
embedchain/embedchain/llm/: anthropic.py  google.py
mem0-plugin/scripts/: setup_coding_categories.py
mem0/llms/: anthropic.py  gemini.py
openmemory/: .env.example  CLAUDE.md  Makefile  docker-compose-dev.yml  docker-compose.yml
openmemory/api/: main.py
openmemory/api/alembic/: env.py
openmemory/api/app/: config.py  database.py  mcp_server.py  models.py  schemas.py
openmemory/api/app/routers/: apps.py  (+4 more)
openmemory/api/tests/: test_categorization.py  test_mcp_server.py
openmemory/docs/plans/: 2026-05-15-cors-fix-nextjs-rewrites-design.md  2026-05-15-cors-fix-nextjs-rewrites-plan.md
openmemory/scripts/: run-dev.sh  stop-dev.sh
openmemory/ui/: Dockerfile  entrypoint.sh  middleware.ts  next.config.dev.mjs  next.config.mjs
openmemory/ui/components/: form-view.tsx
openmemory/ui/hooks/: useAppsApi.ts  useConfig.ts  useFiltersApi.ts  useMemoriesApi.ts  useStats.ts
openmemory/ui/store/: profileSlice.ts
server/: .env.example  auth.py  docker-compose.yaml
server/dashboard/: Dockerfile
server/dashboard/src/: middleware.ts
tests/llms/: test_anthropic.py  test_gemini.py
(+12 files in other folders)
