[project]
name = "openmemory-workspace"
version = "0.1.0"
description = "Workspace for OpenMemory (self-hosted memory) and mem0-plugin"
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-genai>=2.3.0",
    "mem0ai>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.5",
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
]

[tool.ruff]
line-length = 120
src = ["openmemory/api", "mem0-plugin/scripts"]
exclude = [".references/"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = ["openmemory/api"]
